# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

* Changes.txt updated until here **********************************************

2018-04-27 mmichaud <m.michael.michaud@orange.fr>
  * Add a new PlugIn called AddNewLayerViewPlugIn in the Layer context menu
    It creates a Layer which is just a view on another layer data.
    Useful to add symbols/labels on an existing layer without duplicating data

2018-04-18 mmichaud <m.michael.michaud@orange.fr>
  * improve WritableDataStoreLayer wizard (user interaction)

2018-04-15 ede
  * bugfix "[JPP-Devel] Open File does not show file type menu"
    activating the open file menu a second time resulted in an 
    empty file type selection dropdown field 

2018-04-12 mmichaud <m.michael.michaud@orange.fr>
  * Fix #473 : shapefile driver no more limited to 4G files
  * Fix #471 : small bug in PostGIS (new) driver UI
  * Fix #470 : fix transaction manager management (more tests needed)

2018-04-07 Giuseppe Aruta
  * Updated plugins
    1) JumpChart plugin ver. 1.00.
      - bugfix: closing dialog(*)
      - ui fix buttons (**)
      - added Italian language file
    2) VertexSymbols plugin ver. 0.19.
      - bugfix: closing dialog(*)
      - ui fix buttons (**)
    3) Sextante plugin ver. apr_2018. Moved Sextante result outputs 
       (like text, table, image) to OpenJUMP Additional result frame
    4) CAD Toolbox plugin ver. 0.97: some enhancements on toolbox frame.
       Line decoration symbols are drawn equispaced along the linestring
       instead to one per segment of linestring
    5) JumpFillPattern plugin ver. 0.3: moved JumpFillPattern About panel to
       Help menu and added to it some info on how create and use patterns
    (*) when the dialog was closed using "x" upper right button the plugin